--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 /**.logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
@@ -28,4 +27,8 @@
 .read-the-docs {
   color: #888;
 }
-?
+?*/
+
+span.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 120, 0, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
