--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@
 }
 
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
